# WarpX

./: GNUmakefile
Docs/: Doxyfile
Source/: Make.WarpX  WarpX.H  WarpX.cpp
Source/BoundaryConditions/: PML.H  PML.cpp  WarpXEvolvePML.cpp
Source/Diagnostics/: Diagnostics.cpp  FieldIO.cpp  FullDiagnostics.H  FullDiagnostics.cpp  WarpXIO.cpp
Source/Evolve/: WarpXEvolve.cpp  WarpXEvolveEM.cpp
Source/FieldSolver/: WarpXExternalEMFields.cpp  WarpXPushFieldsEM.cpp
Source/FieldSolver/FiniteDifferenceSolver/: CMakeLists.txt  EvolveB.cpp  EvolveBPML.cpp  EvolveEPML.cpp  EvolveHPML.cpp  EvolveM.cpp  FiniteDifferenceSolver.H  MacroscopicEvolveE.cpp  MacroscopicEvolveEPML.cpp  MacroscopicEvolveHM.cpp  MacroscopicEvolveHM_2nd.cpp  MacroscopicEvolveHPML.cpp  MacroscopicEvolveM.cpp  MacroscopicEvolveM_2nd.cpp  Make.package
Source/FieldSolver/FiniteDifferenceSolver/FiniteDifferenceAlgorithms/: CartesianCKCAlgorithm.H  CartesianYeeAlgorithm.H
Source/FieldSolver/FiniteDifferenceSolver/MacroscopicProperties/: MacroscopicProperties.H  MacroscopicProperties.cpp
Source/Initialization/: InjectorPosition.H  PlasmaInjector.H  PlasmaInjector.cpp  WarpXInitData.cpp
Source/Parallelization/: WarpXComm.cpp
Source/Particles/: ExternalForce_PM.H  Make.package  MultiParticleContainer.H  MultiParticleContainer.cpp  PhysicalParticleContainer.H  PhysicalParticleContainer.cpp  PulsarParameters.H  PulsarParameters.cpp  WarpXParticleContainer.H
Source/Utils/: WarpXConst.H  WarpXUtil.H
Tools/: Pulsar_scale_RstarPhysical.ipynb  Visualization_pulsar.ipynb
Tools/pulsar_vis/: Readme.md  (+2 more)
(+71 files in other folders)
